<resources>
    <string name="app_name">CottageGames</string>
    <string name="title_home">Cottage Games!</string>
    <string name="title_play">Play!</string>
    <string name="title_view_all_songs">View All Songs</string>
    <string name="title_add_song">Add Song</string>
    <string name="field_is_required">Field is required</string>
    <string name="title_view_song">View Song</string>
    <string name="song_deleted">Song was deleted.</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="are_you_sure_that_you_want_to_delete_this_item_NP">Are you sure that you want to delete this item?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_name_that_tune">Name That Tune!</string>
    <string name="title_when_was_that">When Was That?!</string>
    <string name="title_celebrity">Celebrity!</string>
    <string name="signin_fragment_label">Sign In</string>
    <string name="download_complete">Download is complete.</string>
    <string name="title_view_all_celebrities">View All Celebrities</string>
    <string name="cottage_games">Cottage Games</string>
    <string name="title_add__song">Add Song</string>
    <string name="title_add_celebrity">Add Celebrity</string>
    <string name="title_view_celebrity">View Celebrity</string>
    <string name="correct">Correct!</string>
    <string name="pass">Pass</string>
    <string name="start_game">Start Game</string>
    <string name="celebrity">"Celebrity"</string>
    <string name="celebrity_deleted">Celebrity was deleted.</string>
    <string name="celebrity_name">Celebrity Name</string>
    <string name="edit_song">Edit item</string>
    <string name="delete_song">Delete item</string>
    <string name="decrease_font_size">Decrease font size</string>
    <string name="increase_font_size">Increase font size</string>
    <string name="search">Search</string>
    <string name="buy_a_card">Buy a Card</string>
    <string name="challenge">Challenge!</string>
    <string name="play_next_song">Play Next Song</string>
    <string name="start_new_game">Start new game</string>
    <string name="card">Card</string>
    <string name="slot">Slot</string>
    <string name="commit">Commit</string>
    <string name="number_of_coins">(%d coins)</string>
    <string name="no_challenge">Do not challenge</string>
    <string name="home">Home</string>
    <string name="coin">Coin</string>
    <string name="trash">trash</string>
    <string name="bank">Bank</string>
    <string name="number_of_teams">Number of Teams</string>
    <string name="duration_to_play">Duration to play</string>
    <string name="team_1">Team 1</string>
    <string name="team_2">Team 2</string>
    <string name="duration_of_song_to_play">Duration of song to play (seconds): </string>
    <string name="tracks_to_win">Timeline length to win (songs): </string>
    <string name="year_range">"Use songs from years "</string>
    <string name="there_is_no_spotify_service_available">There is no Spotify service available</string>
    <string name="unknown_year"><![CDATA[<year>]]></string>
    <string name="audio_playback_attribution">Playback of game audio and tunes</string>
    <string name="options">Options</string>
    <string name="default_number_of_teams">2</string>
    <string name="subtract">-</string>
    <string name="add">+</string>
    <string name="random_location">Random location</string>
    <string name="allow_songs_per_year"><![CDATA[Allow >1 song per year?]]></string>
    <string name="play_song_from">Play song from:</string>
    <string name="start">Start</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="earned_a_coin">Earned a coin!</string>
    <string name="x">X</string>
</resources>