<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <Button
            android:id="@+id/start_name_that_tune_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/title_name_that_tune"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:backgroundTint="@color/red"
            android:layout_margin="15dp"
            android:contentDescription="@string/title_name_that_tune"
            android:elevation="4dp"
            android:scaleType="fitCenter"
            android:stateListAnimator="@animator/anim"/>
        <Button
            android:id="@+id/start_celebrity_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/title_celebrity"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:backgroundTint="@color/teal_700"
            android:layout_margin="15dp"
            android:contentDescription="@string/title_celebrity"
            android:elevation="4dp"
            android:scaleType="fitCenter"
            android:stateListAnimator="@animator/anim"/>
        <Button
            android:id="@+id/start_when_was_that_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/title_when_was_that"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:backgroundTint="@color/orange"
            android:layout_margin="15dp"
            android:contentDescription="@string/title_when_was_that"
            android:elevation="4dp"
            android:scaleType="fitCenter"
            android:stateListAnimator="@animator/anim"/>
        <Button
            android:id="@+id/do_something_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="Do Something for Alex"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:backgroundTint="@color/red"
            android:layout_margin="15dp"
            android:elevation="4dp"
            android:scaleType="fitCenter"
            android:stateListAnimator="@animator/anim"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>