<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CelebrityGameFragment">

    <nl.dionsegijn.konfetti.KonfettiView
        android:id="@+id/konfetti_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/configuration_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/number_of_teams_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:hint="Number of Teams"
            android:minWidth="180dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/number_of_teams"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:gravity="start"
                android:enabled="false"
                android:inputType="number"
                android:text="2" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/length_of_turn_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:hint="Length of turn (seconds)"
            android:minWidth="180dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/length_of_turn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:gravity="start"
                android:inputType="number"
                android:text="30" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/number_of_celebrities_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:hint="Number of Celebrities per round"
            android:minWidth="180dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/number_of_celebrities"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:gravity="start"
                android:inputType="number"
                android:text="40" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/number_of_passes_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:hint="Number of passes allowed per turn"
            android:minWidth="180dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/number_of_passes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:gravity="start"
                android:inputType="number"
                android:text="1" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/team_progress_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:textAlignment="center"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <TextView
                android:id="@+id/team1_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Team 1: "
                android:textAlignment="textEnd"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/team1_number_of_correct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textAlignment="textStart"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textStyle="bold"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/team2_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Team 2: "
                android:textAlignment="textEnd"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/team2_number_of_correct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textAlignment="textStart"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/celebrity_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/countdown_timer_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/team_progress_layout" />

    <LinearLayout
        android:id="@+id/countdown_timer_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        android:paddingBottom="40sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/user_message">

        <TextView
            android:id="@+id/countdown_timer"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAlignment="textEnd"
            android:textSize="30sp"
            android:layout_weight="1"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="   seconds remaining"
            android:textAlignment="gravity"
            android:textSize="15sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/user_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/buttonLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="20sp"
        app:layout_constraintBottom_toTopOf="@id/team_round_progress_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ImageButton
            android:id="@+id/correct_button"
            android:layout_width="0dp"
            android:layout_height="50sp"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:background="@color/green"
            android:contentDescription="@string/correct"
            android:elevation="4dp"
            android:scaleType="fitCenter"
            android:src="@drawable/baseline_check_24"
            android:stateListAnimator="@animator/anim"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/pass_button"
            android:layout_width="wrap_content"
            android:layout_height="50sp"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:background="@color/red"
            android:contentDescription="@string/pass"
            android:elevation="4dp"
            android:scaleType="fitCenter"
            android:src="@drawable/outline_line_end_arrow_notch_24"
            android:stateListAnimator="@animator/anim"
            android:visibility="gone" />

        <Button
            android:id="@+id/start_game_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:contentDescription="@string/start_game"
            android:elevation="4dp"
            android:scaleType="fitCenter"
            android:stateListAnimator="@animator/anim"
            android:text="@string/start_game"
            android:textColor="@color/white"
            android:visibility="visible" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/team_round_progress_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        android:paddingBottom="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/next_up_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Next up: "
            android:textSize="20sp"
            android:layout_weight="1"
            android:visibility="gone"
            android:textAlignment="center"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/round_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Round 1"
            android:textSize="20sp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/team_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Team 1"
            android:textSize="20sp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textStyle="bold"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>